libs/extractor/src/snapshots/extractor__tests__ternary_operator_in_selector-3.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Flex} from '@devup-ui/core'\n        <Flex _hover={a ? { bg: \"red\",color:\"blue\" } : { fontWeight:\"bold\", color:\"red\" }} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-weight",
                value: "bold",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment58) => <div className={`OLdisplay-vflex-o0 ${__devupAssignment58?.[0] ?? \"\"}`} style={{ ...__devupAssignment58?.[1] }} />)(a ? ((__devupField0, __devupField1) => [\n\t`${__devupField0?.[0] ?? \"\"} ${__devupField1?.[0] ?? \"\"}`,\n\t{\n\t\t...__devupField0?.[1],\n\t\t...__devupField1?.[1]\n\t},\n\t{\n\t\tbg: __devupField0?.[2],\n\t\tcolor: __devupField1?.[2]\n\t}\n])(((__devupValue) => [\n\t\"OHbbqqgtgdgkq8u38r\",\n\t{},\n\t__devupValue\n])(\"red\"), ((__devupValue) => [\n\t\"OHbu44dpeea42100uk\",\n\t{},\n\t__devupValue\n])(\"blue\")) : ((__devupField0, __devupField1) => [\n\t`${__devupField0?.[0] ?? \"\"} ${__devupField1?.[0] ?? \"\"}`,\n\t{\n\t\t...__devupField0?.[1],\n\t\t...__devupField1?.[1]\n\t},\n\t{\n\t\tfontWeight: __devupField0?.[2],\n\t\tcolor: __devupField1?.[2]\n\t}\n])(((__devupValue) => [\n\t\"OHdg8g8l3tb373swfp\",\n\t{},\n\t__devupValue\n])(\"bold\"), ((__devupValue) => [\n\t\"OHare_5xpcrm3ke9b3\",\n\t{},\n\t__devupValue\n])(\"red\")));\n",
}
