libs/extractor/src/snapshots/extractor__tests__theme_selector-3.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Box} from '@devup-ui/core'\n    <Box _hover={{bg:\"white\"}} _themeDark={{\n        selectors: {\n          '& :is(svg,img)': {\n            boxSize: '100%',\n            filter: 'brightness(0) invert(1)',\n          },\n        },\n      }} />\n            \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "white",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "filter",
                value: "brightness(0) invert(1)",
                level: 0,
                selector: Some(
                    Selector(
                        ":root[data-theme=dark] & :is(svg,img)",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "height",
                value: "100%",
                level: 0,
                selector: Some(
                    Selector(
                        ":root[data-theme=dark] & :is(svg,img)",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "width",
                value: "100%",
                level: 0,
                selector: Some(
                    Selector(
                        ":root[data-theme=dark] & :is(svg,img)",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"OHabu1xqe6adwqv3bk OHc0_54r1e_btg2c0j OHdt5etbtazm6bv5rv OHack4ibsf54y8y_o4\" />;\n",
}
