libs/extractor/src/snapshots/extractor__tests__type_instantiation_expression_as_style_value.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract_tsx(r\"import { Box } from '@devup-ui/react';\nconst e = <Box bg={pick<string>} />;\"))"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "pick",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst e = <div className=\"OHdgd077eythvzjh4q\" style={{ \"---SUHafv8qlotnkc27944-a5\": pick }} />;\n",
}
