libs/extractor/src/snapshots/extractor__tests__values_known_only_at_runtime.snap
---
source: libs/extractor/src/lib.rs
expression: outputs
---
[
    "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"color\", value: \"red\", level: 0, selector: None, style_order: None, layer: None, naming: Risky })}, code: \"import \\\"@devup-ui/react/devup-ui-0.css\\\";\\nimport { colors } from \\\"./tokens\\\";\\nexport const a = <div className=\\\"FHdobik66ovxjafl1i-RLcolor-vred\\\" />;\\n\" }",
    "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"font-size\", value: \"96px\", level: 0, selector: None, style_order: None, layer: None, naming: Risky })}, code: \"import \\\"@devup-ui/react/devup-ui-0.css\\\";\\nimport { heading } from \\\"./frozen\\\";\\nexport const a = <div className=\\\"FHdobik66ovxjafl1i-RLfont_dsize-v96px\\\" />;\\n\" }",
    "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"color\", value: \"red\", level: 0, selector: None, style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui-0.css\\\";\\nconst theme = { text: { color: \\\"red\\\" } };\\nexport const App = () => <ThemeProvider theme={theme}><div className=\\\"FHdobik66ovxjafl1i-OLcolor-vred\\\" /></ThemeProvider>;\\n\" }",
    "ToBTreeSet { styles: {Dynamic(ExtractDynamicStyle { property: \"padding\", level: 0, identifier: \"handle.p\", selector: None, style_order: None })}, code: \"import \\\"@devup-ui/react/devup-ui-0.css\\\";\\nconst handle = {\\n\\tcurrent: null,\\n\\tp: 1\\n};\\nexport const App = () => <div ref={handle}><div className=\\\"FHdobik66ovxjafl1i-OHcg886laocs542s3j\\\" style={{ \\\"---SUHcu9tr98lvrm28mr9-df\\\": handle.p }} /></div>;\\n\" }",
    "Error: /src/App.tsx:3:22: `css()` cannot use `tokens.base` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/App.tsx:4:23: `<Box>` cannot use `tokens.base` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/App.tsx:6:22: `css()` cannot use `tokens[key]` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/App.tsx:7:18: Cannot compose `make() || tokens.base` at build time: each style must be a rule object, a class, or a condition choosing between them\n/src/App.tsx:7:22: `css()` cannot use `make() || tokens.base` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/changed.ts:4:26: `base` is changed here, so the build cannot read it as a constant",
    "ToBTreeSet { styles: {Dynamic(ExtractDynamicStyle { property: \"color\", level: 0, identifier: \"tokens.colors.primary\", selector: None, style_order: None, naming: Risky })}, code: \"import \\\"@devup-ui/react/devup-ui-0.css\\\";\\nimport * as tokens from \\\"./changed\\\";\\ntokens.colors.primary = \\\"blue\\\";\\nexport const a = <div className=\\\"FHdobik66ovxjafl1i-RHcqj_o64u0amr12oq\\\" style={{ \\\"---SUHdle8r_nofliepet3-dm\\\": tokens.colors.primary }} />;\\n\" }",
    "ToBTreeSet { styles: {Dynamic(ExtractDynamicStyle { property: \"color\", level: 0, identifier: \"__devupSpread0\", selector: None, style_order: None, naming: Risky }), Dynamic(ExtractDynamicStyle { property: \"margin\", level: 0, identifier: \"__devupSpread1\", selector: None, style_order: None, naming: Risky })}, code: \"import \\\"@devup-ui/react/devup-ui-0.css\\\";\\nimport * as tokens from \\\"./changed\\\";\\nregister(tokens);\\nexport const a = ((__devupSpread1, __devupSpread0) => <div className=\\\"FHdobik66ovxjafl1i-RHc060hhi9b372lujb FHdobik66ovxjafl1i-RHcix0y45agm7e1dk4\\\" style={{\\n\\t\\\"---SUHdqb9jnbh5hfs48fy-c5\\\": __devupSpread1,\\n\\t\\\"---SUHdqb9jnbh5hfs48fy-dq\\\": __devupSpread0\\n}} />)(tokens.helper, tokens.colors.primary);\\n\" }",
    "Error: /src/App.tsx:5:22: `css()` cannot use `theme.base` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/App.tsx:5:34: `css()` cannot use `tokens.base` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/App.tsx:5:47: `css()` cannot use `base` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/App.tsx:6:23: `<Box>` cannot use `theme` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/changed.ts:4:26: `base` is changed here, so the build cannot read it as a constant",
    "Error: /src/App.tsx:3:18: `css()` cannot use `Scale.of(1)` at build time: its values must be literals, theme tokens or constants, or be computed from them\n/src/App.tsx:4:18: `css()` cannot use `mode` at build time: its values must be literals, theme tokens or constants, or be computed from them",
    "Error: /src/App.tsx:3:18: `css()` cannot use `label` at build time: its values must be literals, theme tokens or constants, or be computed from them\n/src/App.tsx:4:18: `css()` cannot use `format(1)` at build time: its values must be literals, theme tokens or constants, or be computed from them",
    "Error: /src/App.tsx:5:18: `css()` cannot use `label()` at build time: its values must be literals, theme tokens or constants, or be computed from them\n/src/App.tsx:6:18: `css()` cannot use `pick()` at build time: its values must be literals, theme tokens or constants, or be computed from them\n/src/App.tsx:7:18: `css()` cannot use `window.innerWidth` at build time: its values must be literals, theme tokens or constants, or be computed from them\n/src/App.tsx:8:18: `css()` cannot use `new Intl.NumberFormat().format(1)` at build time: its values must be literals, theme tokens or constants, or be computed from them",
    "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"background\", value: \"red\", level: 0, selector: None, style_order: None, layer: None, naming: Risky }), Static(ExtractStaticStyle { property: \"margin\", value: \"8px\", level: 0, selector: None, style_order: None, layer: None, naming: Risky }), Dynamic(ExtractDynamicStyle { property: \"color\", level: 0, identifier: \"__devupSpread0\", selector: None, style_order: None, naming: Risky })}, code: \"import \\\"@devup-ui/react/devup-ui-0.css\\\";\\nimport { colors } from \\\"./cjs\\\";\\nimport cjs, { colors as plain, spacing } from \\\"./cjs-plain\\\";\\nexport const a = ((__devupSpread0) => <div className=\\\"FHdobik66ovxjafl1i-RHcxwxab7u3jstaplw FHdobik66ovxjafl1i-RLbackground-vred FHdobik66ovxjafl1i-RLmargin-v8px\\\" style={{ \\\"---SUHc39bzg5d0qb4faog-d_\\\": __devupSpread0 }} />)(colors.primary);\\n\" }",
    "ToBTreeSet { styles: {Dynamic(ExtractDynamicStyle { property: \"padding\", level: 0, identifier: \"list[0].p\", selector: None, style_order: None })}, code: \"import \\\"@devup-ui/react/devup-ui-0.css\\\";\\nconst list = [{ p: 1 }];\\nfor (const item of list) item.p = 2;\\nexport const a = <div className=\\\"FHdobik66ovxjafl1i-OHbu0f7_id7vx3xcwz\\\" style={{ \\\"---SUHdpx0871oibp9p0m1-db\\\": list[0].p }} />;\\n\" }",
    "ToBTreeSet { styles: {Dynamic(ExtractDynamicStyle { property: \"padding\", level: 0, identifier: \"list[0].p\", selector: None, style_order: None })}, code: \"import \\\"@devup-ui/react/devup-ui-0.css\\\";\\nconst list = [{ p: 1 }];\\nlist.forEach((item) => {\\n\\titem.p = 2;\\n});\\nexport const a = <div className=\\\"FHdobik66ovxjafl1i-OHbg8c_y63m1wgbs9m\\\" style={{ \\\"---SUHcoj7kg0l54p3okh6-df\\\": list[0].p }} />;\\n\" }",
    "ToBTreeSet { styles: {Dynamic(ExtractDynamicStyle { property: \"padding\", level: 0, identifier: \"store.items[0]\", selector: None, style_order: None })}, code: \"import \\\"@devup-ui/react/devup-ui-0.css\\\";\\nconst store = {\\n\\titems: [1],\\n\\tadd(x) {\\n\\t\\tthis.items.push(x);\\n\\t}\\n};\\nstore.add(2);\\nexport const a = <div className=\\\"FHdobik66ovxjafl1i-OHdrnqweuinsy4wrkq\\\" style={{ \\\"---SUHb3vm92m9zh5ambev-dp\\\": store.items[0] }} />;\\n\" }",
    "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"color\", value: \"red\", level: 0, selector: None, style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui-0.css\\\";\\nconst theme = {\\n\\tspacing: (n) => n * 4,\\n\\tcolors: { primary: \\\"red\\\" },\\n\\tlabel: \\\"x\\\"\\n};\\nconst gap = theme.spacing(2);\\ntheme.label.custom();\\nexport const a = <div className=\\\"FHdobik66ovxjafl1i-OLcolor-vred\\\" />;\\n\" }",
    "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"padding\", value: \"4px\", level: 0, selector: None, style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui-0.css\\\";\\nconst sizes = [1, 2];\\nconst copy = Array.from(sizes);\\nexport const a = <div className=\\\"FHdobik66ovxjafl1i-OLpadding-v4px\\\" />;\\n\" }",
    "Error: /src/App.tsx:4:18: `css()` cannot use `pick()` at build time: its values must be literals, theme tokens or constants, or be computed from them",
    "Error: /src/App.tsx:4:18: `css()` cannot use `pick()` at build time: its values must be literals, theme tokens or constants, or be computed from them",
    "Error: /src/App.tsx:4:18: `css()` cannot use `pick()` at build time: its values must be literals, theme tokens or constants, or be computed from them",
    "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"content\", value: \"1234.5\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"font-size-adjust\", value: \".5\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"math-depth\", value: \"2\", level: 0, selector: None, style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui-0.css\\\";\\nexport const a = \\\"FHdobik66ovxjafl1i-OLcontent-v1234_p5 FHdobik66ovxjafl1i-OHbtwp1eimcewhbizr FHdobik66ovxjafl1i-OLmath_ddepth-v2\\\";\\n\" }",
]
