libs/extractor/src/snapshots/extractor__tests__vanilla_extract_constant_exports.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"constants.css.ts\",\nr\"import { style } from '@devup-ui/react'\nexport const SPACING = 8;\nexport const COLORS = { primary: 'blue', secondary: 'green' };\nexport const box = style({ padding: SPACING })\n\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "8px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const box = \"f0_0 a\";\nexport const SPACING = 8;\nexport const COLORS = {\n\t\"primary\": \"blue\",\n\t\"secondary\": \"green\"\n};\n",
}
